# hackillinois

./: ImageUtils.h  ImageUtils_0.7.cpp  README.md
build_linux/: CMakeCache.txt  Makefile  cmake_install.cmake  run  run_automoc.cpp
build_linux/run_automoc.dir/: moc_mainwindow_L2CLFKCLUYECYY.cpp
build_rp3/: CMakeCache.txt  Makefile  cmake_install.cmake  face.txt  moc_mainwindow.cpp  run
dlib/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
dlib-19.0 (vc14)/build_release/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Project.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
dlib-19.0 (vc14)/build_release/dlib/: ALL_BUILD.vcxproj  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  dlib-1.pc  dlib.sln  dlib.vcxproj  dlib.vcxproj.filters  revision.h
dlib-19.0 (vc14)/build_release/dlib/dlib.dir/Release/dlib.tlog/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  (+2 more)
dlib/dlib/: Makefile  cmake_install.cmake  dlib-1.pc  libdlib.so.19.0.0
dlib/dlib/config/: dlibConfig.cmake  dlibConfigVersion.cmake
dlib/dlib/matrix/: matrix_utilities.h
face_recognition/: .compile.sh.swp  compile.sh  face.cpp  face.h  main  main.cpp  makefile
face_recognition/PCA/: meanFace.txt
gui/: .face.cpp.swp  CMakeLists.txt  ImageUtils_0.7.cpp  face.cpp  face.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  preprocessFace.cpp  train.cpp  ui_mainwindow.h
(+9 files in other folders)
